force-app/main/default/objects/Task/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <type>Lookup</type>
    <referenceTo>Matter__c</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <relationshipLabel>Tasks</relationshipLabel>
</CustomField>