force-app/main/default/objects/Task/fields/Related_Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>Related_Time_Entry__c</fullName>
    <label>Related Time Entry</label>
    <type>Lookup</type>
    <referenceTo>Time_Entry__c</referenceTo>
    <relationshipName>Related_Tasks</relationshipName>
    <relationshipLabel>Related Tasks</relationshipLabel>
</CustomField>